Basic controller and openapi spec